# ChangeLog for dev-ruby/ncurses-ruby
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ncurses-ruby/ChangeLog,v 1.34 2009/07/14 18:23:38 graaff Exp $

  14 Jul 2009; Hans de Graaff <graaff@gentoo.org> ncurses-ruby-1.2.3.ebuild:
  Add back missing CVS header.

*ncurses-ruby-1.2.3 (14 Jul 2009)

  14 Jul 2009; Hans de Graaff <graaff@gentoo.org> ncurses-ruby-1.1.ebuild,
  +ncurses-ruby-1.2.3.ebuild:
  Version bump. Remove ruby19 keyword from ncurses-ruby.1.1 since it is not
  compatible. Thanks to Kevin Fullerton in bug 276826 for testing and
  providing the new ebuild.

  14 Jul 2009; Hans de Graaff <graaff@gentoo.org>
  -ncurses-ruby-0.9.1.ebuild:
  Remove old version.

  02 May 2008; Rob Cakebread <pythonhead@gentoo.org>
  ncurses-ruby-0.9.1.ebuild, ncurses-ruby-1.1.ebuild:
  Use berlios mirror. bug #218657

  24 Jan 2008; Christoph Mende <angelos@gentoo.org> ncurses-ruby-1.1.ebuild:
  Stable on amd64, bug #206737

  21 Jan 2008; Raúl Porcel <armin76@gentoo.org> ncurses-ruby-1.1.ebuild:
  alpha/sparc stable wrt #206737

  21 Jan 2008; Markus Meier <maekke@gentoo.org> ncurses-ruby-1.1.ebuild:
  x86 stable, bug #206737

  20 Jan 2008; Brent Baude <ranger@gentoo.org> ncurses-ruby-1.1.ebuild:
  Marking ncurses-ruby-1.1 ppc and ppc64 for bug 206737

  20 Jan 2008; Hans de Graaff <graaff@gentoo.org> ncurses-ruby-1.1.ebuild:
  Remove obsolete variable for #145222

  20 Jan 2008; Hans de Graaff <graaff@gentoo.org> -ncurses-ruby-0.8.ebuild,
  -ncurses-ruby-0.9.2.ebuild:
  Remove old version and intermediate version that won't be made stable.

  17 Jul 2007; Markus Rothe <corsair@gentoo.org> ncurses-ruby-1.1.ebuild:
  Added ~ppc64

  14 Mar 2007; Tom Gall <tgall@gentoo.org> ncurses-ruby-0.9.2.ebuild:
  added ~ppc64

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  21 Jan 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>