@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ncurses-ruby
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ncurses-ruby/ChangeLog,v 1.34 2009/07/14 18:23:38 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ncurses-ruby/ChangeLog,v 1.35 2009/08/30 09:14:33 graaff Exp $
+
+*ncurses-ruby-1.2.3-r1 (30 Aug 2009)
+
+  30 Aug 2009; Hans de Graaff <graaff@gentoo.org>
+  +ncurses-ruby-1.2.3-r1.ebuild:
+  Add a fake gemspec file so that this package can be used by other gems.
 
   14 Jul 2009; Hans de Graaff <graaff@gentoo.org> ncurses-ruby-1.2.3.ebuild:
   Add back missing CVS header.
